<resources>
    <string name="title_attribouter_about">About</string>
    <string name="title_attribouter_licenses">Open Source Licenses</string>
    <string name="title_attribouter_email">Email</string>
    <string name="title_attribouter_website">Website</string>
    <string name="title_attribouter_github">GitHub</string>
    <string name="title_attribouter_rate">Rate</string>
    <string name="title_attribouter_version">Version %1$s</string>
    <string name="title_attribouter_contributors">Contributors</string>
    <string name="title_attribouter_license">License</string>
    <string name="title_attribouter_license_permissions">Permissions</string>
    <string name="title_attribouter_license_conditions">Conditions</string>
    <string name="title_attribouter_license_limitations">Limitations</string>
    <string name="title_attribouter_more_info">More Info</string>
    <string name="desc_attribouter_licenses_legal">This is not legal advice. The above information is intended solely to inform the user of general information about open source licenses. Open source licenses allow software to be freely used, modified, and shared. However, they do not come without exceptions. Please be aware of the restrictions of the licenses that you are using before publishing your software.</string>
    <string name="title_attribouter_lang_af">Afrikaans</string>
    <string name="title_attribouter_lang_agq">Aghem</string>
    <string name="title_attribouter_lang_ak">Akan</string>
    <string name="title_attribouter_lang_sq">Albanian</string>
    <string name="title_attribouter_lang_am">Amharic</string>
    <string name="title_attribouter_lang_ar">Arabic</string>
    <string name="title_attribouter_lang_hy">Armenian</string>
    <string name="title_attribouter_lang_as">Assamese</string>
    <string name="title_attribouter_lang_ast">Asturian</string>
    <string name="title_attribouter_lang_asa">Asu</string>
    <string name="title_attribouter_lang_az">Azerbaijani</string>
    <string name="title_attribouter_lang_ksf">Bafia</string>
    <string name="title_attribouter_lang_bm">Bambara</string>
    <string name="title_attribouter_lang_bn">Bangla</string>
    <string name="title_attribouter_lang_bas">Basaa</string>
    <string name="title_attribouter_lang_eu">Basque</string>
    <string name="title_attribouter_lang_be">Belarusian</string>
    <string name="title_attribouter_lang_bem">Bemba</string>
    <string name="title_attribouter_lang_bez">Bena</string>
    <string name="title_attribouter_lang_brx">Bodo</string>
    <string name="title_attribouter_lang_bs">Bosnian</string>
    <string name="title_attribouter_lang_br">Breton</string>
    <string name="title_attribouter_lang_bg">Bulgarian</string>
    <string name="title_attribouter_lang_my">Burmese</string>
    <string name="title_attribouter_lang_yue">Cantonese</string>
    <string name="title_attribouter_lang_ca">Catalan</string>
    <string name="title_attribouter_lang_tzm">Central Atlas Tamazight</string>
    <string name="title_attribouter_lang_ckb">Central Kurdish</string>
    <string name="title_attribouter_lang_ccp">Chakma</string>
    <string name="title_attribouter_lang_ce">Chechen</string>
    <string name="title_attribouter_lang_chr">Cherokee</string>
    <string name="title_attribouter_lang_cgg">Chiga</string>
    <string name="title_attribouter_lang_zh">Chinese</string>
    <string name="title_attribouter_lang_ksh">Colognian</string>
    <string name="title_attribouter_lang_kw">Cornish</string>
    <string name="title_attribouter_lang_hr">Croatian</string>
    <string name="title_attribouter_lang_cs">Czech</string>
    <string name="title_attribouter_lang_da">Danish</string>
    <string name="title_attribouter_lang_dua">Duala</string>
    <string name="title_attribouter_lang_nl">Dutch</string>
    <string name="title_attribouter_lang_dz">Dzongkha</string>
    <string name="title_attribouter_lang_ebu">Embu</string>
    <string name="title_attribouter_lang_en">English</string>
    <string name="title_attribouter_lang_eo">Esperanto</string>
    <string name="title_attribouter_lang_et">Estonian</string>
    <string name="title_attribouter_lang_ee">Ewe</string>
    <string name="title_attribouter_lang_ewo">Ewondo</string>
    <string name="title_attribouter_lang_fo">Faroese</string>
    <string name="title_attribouter_lang_fil">Filipino</string>
    <string name="title_attribouter_lang_fi">Finnish</string>
    <string name="title_attribouter_lang_fr">French</string>
    <string name="title_attribouter_lang_fur">Friulian</string>
    <string name="title_attribouter_lang_ff">Fulah</string>
    <string name="title_attribouter_lang_gl">Galician</string>
    <string name="title_attribouter_lang_lg">Ganda</string>
    <string name="title_attribouter_lang_ka">Georgian</string>
    <string name="title_attribouter_lang_de">German</string>
    <string name="title_attribouter_lang_el">Greek</string>
    <string name="title_attribouter_lang_gu">Gujarati</string>
    <string name="title_attribouter_lang_guz">Gusii</string>
    <string name="title_attribouter_lang_ha">Hausa</string>
    <string name="title_attribouter_lang_haw">Hawaiian</string>
    <string name="title_attribouter_lang_he">Hebrew</string>
    <string name="title_attribouter_lang_hi">Hindi</string>
    <string name="title_attribouter_lang_hu">Hungarian</string>
    <string name="title_attribouter_lang_is">Icelandic</string>
    <string name="title_attribouter_lang_ig">Igbo</string>
    <string name="title_attribouter_lang_smn">Inari Sami</string>
    <string name="title_attribouter_lang_id">Indonesian</string>
    <string name="title_attribouter_lang_ga">Irish</string>
    <string name="title_attribouter_lang_it">Italian</string>
    <string name="title_attribouter_lang_ja">Japanese</string>
    <string name="title_attribouter_lang_dyo">Jola-Fonyi</string>
    <string name="title_attribouter_lang_kea">Kabuverdianu</string>
    <string name="title_attribouter_lang_kab">Kabyle</string>
    <string name="title_attribouter_lang_kkj">Kako</string>
    <string name="title_attribouter_lang_kl">Kalaallisut</string>
    <string name="title_attribouter_lang_kln">Kalenjin</string>
    <string name="title_attribouter_lang_kam">Kamba</string>
    <string name="title_attribouter_lang_kn">Kannada</string>
    <string name="title_attribouter_lang_ks">Kashmiri</string>
    <string name="title_attribouter_lang_kk">Kazakh</string>
    <string name="title_attribouter_lang_km">Khmer</string>
    <string name="title_attribouter_lang_ki">Kikuyu</string>
    <string name="title_attribouter_lang_rw">Kinyarwanda</string>
    <string name="title_attribouter_lang_kok">Konkani</string>
    <string name="title_attribouter_lang_ko">Korean</string>
    <string name="title_attribouter_lang_khq">Koyra Chiini</string>
    <string name="title_attribouter_lang_ses">Koyraboro Senni</string>
    <string name="title_attribouter_lang_nmg">Kwasio</string>
    <string name="title_attribouter_lang_ky">Kyrgyz</string>
    <string name="title_attribouter_lang_lkt">Lakota</string>
    <string name="title_attribouter_lang_lag">Langi</string>
    <string name="title_attribouter_lang_lo">Lao</string>
    <string name="title_attribouter_lang_lv">Latvian</string>
    <string name="title_attribouter_lang_ln">Lingala</string>
    <string name="title_attribouter_lang_lt">Lithuanian</string>
    <string name="title_attribouter_lang_nds">Low German</string>
    <string name="title_attribouter_lang_dsb">Lower Sorbian</string>
    <string name="title_attribouter_lang_lu">Luba-Katanga</string>
    <string name="title_attribouter_lang_luo">Luo</string>
    <string name="title_attribouter_lang_lb">Luxembourgish</string>
    <string name="title_attribouter_lang_luy">Luyia</string>
    <string name="title_attribouter_lang_mk">Macedonian</string>
    <string name="title_attribouter_lang_jmc">Machame</string>
    <string name="title_attribouter_lang_mgh">Makhuwa-Meetto</string>
    <string name="title_attribouter_lang_kde">Makonde</string>
    <string name="title_attribouter_lang_mg">Malagasy</string>
    <string name="title_attribouter_lang_ms">Malay</string>
    <string name="title_attribouter_lang_ml">Malayalam</string>
    <string name="title_attribouter_lang_mt">Maltese</string>
    <string name="title_attribouter_lang_gv">Manx</string>
    <string name="title_attribouter_lang_mr">Marathi</string>
    <string name="title_attribouter_lang_mas">Masai</string>
    <string name="title_attribouter_lang_mzn">Mazanderani</string>
    <string name="title_attribouter_lang_mer">Meru</string>
    <string name="title_attribouter_lang_mgo">Metaʼ</string>
    <string name="title_attribouter_lang_mn">Mongolian</string>
    <string name="title_attribouter_lang_mfe">Morisyen</string>
    <string name="title_attribouter_lang_mua">Mundang</string>
    <string name="title_attribouter_lang_naq">Nama</string>
    <string name="title_attribouter_lang_ne">Nepali</string>
    <string name="title_attribouter_lang_nnh">Ngiemboon</string>
    <string name="title_attribouter_lang_jgo">Ngomba</string>
    <string name="title_attribouter_lang_nd">North Ndebele</string>
    <string name="title_attribouter_lang_lrc">Northern Luri</string>
    <string name="title_attribouter_lang_se">Northern Sami</string>
    <string name="title_attribouter_lang_nb">Norwegian Bokmål</string>
    <string name="title_attribouter_lang_nn">Norwegian Nynorsk</string>
    <string name="title_attribouter_lang_nus">Nuer</string>
    <string name="title_attribouter_lang_nyn">Nyankole</string>
    <string name="title_attribouter_lang_or">Odia</string>
    <string name="title_attribouter_lang_om">Oromo</string>
    <string name="title_attribouter_lang_os">Ossetic</string>
    <string name="title_attribouter_lang_ps">Pashto</string>
    <string name="title_attribouter_lang_fa">Persian</string>
    <string name="title_attribouter_lang_pl">Polish</string>
    <string name="title_attribouter_lang_pt">Portuguese</string>
    <string name="title_attribouter_lang_pa">Punjabi</string>
    <string name="title_attribouter_lang_qu">Quechua</string>
    <string name="title_attribouter_lang_ro">Romanian</string>
    <string name="title_attribouter_lang_rm">Romansh</string>
    <string name="title_attribouter_lang_rof">Rombo</string>
    <string name="title_attribouter_lang_rn">Rundi</string>
    <string name="title_attribouter_lang_ru">Russian</string>
    <string name="title_attribouter_lang_rwk">Rwa</string>
    <string name="title_attribouter_lang_sah">Sakha</string>
    <string name="title_attribouter_lang_saq">Samburu</string>
    <string name="title_attribouter_lang_sg">Sango</string>
    <string name="title_attribouter_lang_sbp">Sangu</string>
    <string name="title_attribouter_lang_gd">Scottish Gaelic</string>
    <string name="title_attribouter_lang_seh">Sena</string>
    <string name="title_attribouter_lang_sr">Serbian</string>
    <string name="title_attribouter_lang_ksb">Shambala</string>
    <string name="title_attribouter_lang_sn">Shona</string>
    <string name="title_attribouter_lang_ii">Sichuan Yi</string>
    <string name="title_attribouter_lang_si">Sinhala</string>
    <string name="title_attribouter_lang_sk">Slovak</string>
    <string name="title_attribouter_lang_sl">Slovenian</string>
    <string name="title_attribouter_lang_xog">Soga</string>
    <string name="title_attribouter_lang_so">Somali</string>
    <string name="title_attribouter_lang_es">Spanish</string>
    <string name="title_attribouter_lang_zgh">Standard Moroccan Tamazight</string>
    <string name="title_attribouter_lang_sw">Swahili</string>
    <string name="title_attribouter_lang_sv">Swedish</string>
    <string name="title_attribouter_lang_gsw">Swiss German</string>
    <string name="title_attribouter_lang_shi">Tachelhit</string>
    <string name="title_attribouter_lang_dav">Taita</string>
    <string name="title_attribouter_lang_tg">Tajik</string>
</resources>