<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:minHeight="500dp"
    android:minWidth="400dp"
    android:paddingBottom="12dp"
    android:paddingTop="12dp"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="6dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="22sp"
            tools:text="License name" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp"
            tools:text="This is a license that does things." />

        <HorizontalScrollView
            android:id="@+id/infoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/permissions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/title_attribouter_license_permissions"
                        android:textAllCaps="true"
                        android:textColor="@color/attribouter_licensePermissionsColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/permissionsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lineSpacingMultiplier="1.1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="14sp"
                        tools:text="attribution\nopen source\nwhatever" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/title_attribouter_license_conditions"
                        android:textAllCaps="true"
                        android:textColor="@color/attribouter_licenseConditionsColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/conditionsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lineSpacingMultiplier="1.1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="14sp"
                        tools:text="attribution\nopen source\nwhatever" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/limitations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/title_attribouter_license_limitations"
                        android:textAllCaps="true"
                        android:textColor="@color/attribouter_licenseLimitationsColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/limitationsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lineSpacingMultiplier="1.1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="14sp"
                        tools:text="attribution\nopen source\nwhatever" />

                </LinearLayout>
            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="12sp"
            android:text="@string/desc_attribouter_licenses_legal" />

        <HorizontalScrollView
            android:id="@+id/bodyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_attribouter_emphasized"
            android:scrollbars="horizontal">

            <TextView
                android:id="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="12dp"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp"
                tools:text="somethingsomethingsomethingsomething\tsomethingsomethingsomething\nsomething" />

        </HorizontalScrollView>

        <TextView
            android:id="@+id/moreInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/title_attribouter_more_info"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>